# two_towers

./: .gitignore  Final_model_pipeline.ipynb  Final_model_pipeline_oneexample.ipynb  README.md  creating_dataset-1.ipynb  data.py  fianL_model_pipeline_query.ipynb  gpu_requirements.txt  model_pipeline2.py  model_pipleine_temp.ipynb  pyproject.toml
app/: main.py  processor.py
model/: two_towers.py  w2v_model.py
templates/: index.html
training/: create_two_towers.py  train_two_towers.py  train_word2vec.py  update_w2v_vocab.py
utils/: build_internet.py  cache_encodings.py  create_lookup_dicts.py  expand_vocab.py  lookup.pkl  lookup_updated.pkl  prep_two_tower_dataset.py  prep_w2v_dataset.py  text_utils.py  tokeniser.py  two_tower_dataset.py
